--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@ spring.application.name=despliegue-api-rest
 #spring.jpa.generate-ddl=false
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA / Hibernate
